--- a/src/vscripts/tsconfig.json
+++ b/src/vscripts/tsconfig.json
@@ -8,7 +8,8 @@
         "plugins": [{ "transform": "@moddota/dota-lua-types/transformer" }],
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "strict": true
+        "strict": true,
+        "resolveJsonModule": true
     },
     "tstl": {
         "luaTarget": "JIT",
